--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@types/mongodb": "^4.0.7",
+    "mongodb": "^5.7.0"
   }
 }
